@@ -1,3 +1,9 @@
+Thu Apr  4 17:28:50 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>
+
+        * cuts/iccm/arch/tao/compiler/Event_Traits.cpp:
+
+          Removed comments/dead code
+
 Thu Apr  4 17:26:22 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>
 
         * cuts/arch/ccm/CCM_Event_Handler_T.cpp:
